# truth-mines

./: .gitignore  COMPLETION.md  EPIC9_ROADMAP.md  FINAL_COMPREHENSIVE_SUMMARY.md  FINAL_SESSION_REPORT.md  PRD-extension.md  PRD.md  PROGRESS.md  README.md  README_NEXT_STEPS.md  ROADMAP.md  SEND_TO_GEMINI.md  SESSION_SUMMARY.md  STATUS.md  Transparency.md  package-lock.json  response_from_gemini_3_pro.md
.github/: dependabot.yml
.truth-mines/: schema.toml
docs/: API.md  ARCHITECTURE.md  FEDERATION.md  FOCUS_PATH_SPEC.md  GEMINI_REVIEW.md  INTERACTION_SPEC.md  JOURNAL.md  NODEDETAIL_TABS_SPEC.md  PATH_TRAVEL.md  PERFORMANCE.md  SALIENCE_MODEL.md  TENSION_VISUAL_SPEC.md  WEBGPU_INTEGRATION.md  llm-integration.md
edges/: attacks.jsonl  defines.jsonl  entails.jsonl  formalizes.jsonl  models.jsonl  predicts.jsonl  proves.jsonl  supports.jsonl
engine/: Cargo.toml  README.md
engine/src/: lib.rs  wasm.rs
engine/src/analysis/: load_bearing.rs  mod.rs
engine/src/gpu/: buffers.rs  mod.rs  types.rs
engine/src/graph/: edge.rs  filter.rs  mod.rs  node.rs  query.rs  store.rs
engine/src/layout/: depth.rs  force.rs  mod.rs  truth_mine.rs
engine/src/parsers/: json.rs  mod.rs  toon.rs
engine/src/style/: mapper.rs  mod.rs
engine/tests/: integration_test.rs
nodes/: 00c001.json  0lg001.json  0lg002.json  0lg003.json  0lg004.json  0lg005.json  0qm001.json  0sr001.json  0vt001.json  g8t2r1.json  k7x9m2.json  l2p9k4.json  obs001.json  obs003.json  raw001.json  raw003.json  t4k2p9.json
notebooks/: README.md  llm-exploration.ipynb
schemas/: edge.schema.json  (+1 more)
(+130 files in other folders)
