[package]
name = "truth-mines-engine"
version = "0.1.0"
authors = ["Truth Mines Contributors"]
edition = "2021"
description = "Graph processing engine for Truth Mines knowledge system"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
strip = true         # Strip symbols

[[bench]]
name = "graph_ops"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
